# chat-api

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py
backend/app/models/: message.py
backend/app/services/: llm_service.py
frontend/: index.html  script.js  styles.css
