[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["Guilherme Gaigher netto <ggaighernt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.6"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
