[tool.ruff]
line-length = 99
lint.select = ["E", "F", "W", "N", "C", "D"]
lint.ignore = ["D401", "D404"]
target-version = "py310"
output-format = "full"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.black]
line-length = 99
target-version = ['py310']
include = '\.pyi?$'

[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["Guilherme Gaigher netto <ggaighernt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.6"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
